update rules, update readme

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
           ><i class="ms-Icon ms-Icon--plus"></i
         ></span>
         <span class="ms-Button-label">Select file</span>
-        <span class="ms-Button-description">[instruction goes here]</span>
+        <span class="ms-Button-description"
+          >Choose .xslx file from anywhere, save it to your Dropbox folder</span
+        >
       </button>
       Created with Metta at Wat Sacca
     </div>
