--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <span class="ms-Button-icon"
           ><i class="ms-Icon ms-Icon--plus"></i
         ></span>
-        <span class="ms-Button-label">Select file</span>
+        <span class="ms-Button-label">Select .xslx file</span>
         <span class="ms-Button-description"
-          >Choose .xslx file from anywhere, save it to your Dropbox folder</span
+          >Choose file from anywhere, save it to your Dropbox folder</span
         >
       </button>
       Created with Metta at Wat Sacca
